// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DemoExplorerSetupEmbedded.vue > renders the default RPC form 1`] = `
"<div data-v-d31fb907="" class="v-card v-theme--light border-none v-card--density-default v-card--variant-elevated">
  <!---->
  <div class="v-card__loader">
    <div class="v-progress-linear v-theme--light v-locale--is-ltr" style="top: 0px; height: 0px; --v-progress-linear-height: 2px;" role="progressbar" aria-hidden="true" aria-valuemin="0" aria-valuemax="100">
      <!---->
      <div class="v-progress-linear__background"></div>
      <div class="v-progress-linear__buffer" style="width: 0%;"></div>
      <transition-stub name="fade-transition" appear="false" persisted="false" css="true">
        <div class="v-progress-linear__indeterminate">
          <div class="v-progress-linear__indeterminate long"></div>
          <div class="v-progress-linear__indeterminate short"></div>
        </div>
      </transition-stub>
      <!---->
    </div>
  </div>
  <!---->
  <!---->
  <div data-v-d31fb907="" class="v-card-text pa-2 pt-3 pb-0">
    <transition-stub data-v-d31fb907="" name="slide-x-transition" mode="out-in" appear="false" persisted="false" css="true">
      <div data-v-d31fb907="">
        <form data-v-d31fb907="" class="v-form" novalidate="">
          <div data-v-d31fb907="" class="v-input v-input--horizontal v-input--center-affix v-input--density-default v-theme--light v-locale--is-ltr v-text-field">
            <!---->
            <div class="v-input__control">
              <div class="v-field v-field--center-affix v-field--variant-outlined v-theme--light v-locale--is-ltr">
                <div class="v-field__overlay"></div>
                <div class="v-field__loader">
                  <div class="v-progress-linear v-theme--light v-locale--is-ltr" style="top: 0px; height: 0px; --v-progress-linear-height: 2px;" role="progressbar" aria-hidden="true" aria-valuemin="0" aria-valuemax="100">
                    <!---->
                    <div class="v-progress-linear__background"></div>
                    <div class="v-progress-linear__buffer" style="width: 0%;"></div>
                    <transition-stub name="fade-transition" appear="false" persisted="false" css="true">
                      <div class="v-progress-linear__indeterminate">
                        <div class="v-progress-linear__indeterminate long"></div>
                        <div class="v-progress-linear__indeterminate short"></div>
                      </div>
                    </transition-stub>
                    <!---->
                  </div>
                </div>
                <!---->
                <div class="v-field__field" data-no-activator="">
                  <!----><label class="v-label v-field-label" for="input-0">
                    <!---->RPC URL
                  </label>
                  <!----><input placeholder="https://my.rpc.com:8545" size="1" type="text" id="input-0" aria-describedby="input-0-messages" required="" class="v-field__input">
                  <!---->
                </div>
                <!---->
                <!---->
                <div class="v-field__outline">
                  <div class="v-field__outline__start"></div>
                  <div class="v-field__outline__notch"><label class="v-label v-field-label v-field-label--floating" aria-hidden="true" for="input-0">
                      <!---->RPC URL
                    </label></div>
                  <div class="v-field__outline__end"></div>
                  <!---->
                </div>
              </div>
            </div>
            <div class="v-input__append">
              <!----><button data-v-d31fb907="" type="submit" class="v-btn v-btn--disabled v-theme--light bg-primary v-btn--density-default v-btn--size-default v-btn--variant-elevated" style="height: 56px;" disabled=""><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
                <!----><span class="v-btn__content" data-no-activator="">Get Started</span>
                <!---->
                <!---->
              </button>
            </div>
            <div id="input-0-messages" class="v-input__details" role="alert" aria-live="polite">
              <transition-group-stub name="slide-y-transition" tag="div" appear="false" persisted="false" css="true" class="v-messages">
                <!---->
              </transition-group-stub>
              <!---->
            </div>
          </div>
        </form>
      </div>
    </transition-stub>
  </div>
  <!---->
  <!----><span class="v-card__underlay"></span>
</div>"
`;

exports[`DemoExplorerSetupEmbedded.vue > shows the email field after submitting RPC 1`] = `
"<div data-v-d31fb907="" class="v-card v-theme--light border-none v-card--density-default v-card--variant-elevated">
  <!---->
  <div class="v-card__loader">
    <div class="v-progress-linear v-theme--light v-locale--is-ltr" style="top: 0px; height: 0px; --v-progress-linear-height: 2px;" role="progressbar" aria-hidden="true" aria-valuemin="0" aria-valuemax="100">
      <!---->
      <div class="v-progress-linear__background"></div>
      <div class="v-progress-linear__buffer" style="width: 0%;"></div>
      <transition-stub name="fade-transition" appear="false" persisted="false" css="true">
        <div class="v-progress-linear__indeterminate">
          <div class="v-progress-linear__indeterminate long"></div>
          <div class="v-progress-linear__indeterminate short"></div>
        </div>
      </transition-stub>
      <!---->
    </div>
  </div>
  <!---->
  <!---->
  <div data-v-d31fb907="" class="v-card-text pa-2 pt-3 pb-0">
    <transition-stub data-v-d31fb907="" name="slide-x-transition" mode="out-in" appear="false" persisted="false" css="true">
      <div data-v-d31fb907="">
        <form data-v-d31fb907="" class="v-form" novalidate="">
          <div data-v-d31fb907="" class="v-input v-input--horizontal v-input--center-affix v-input--density-default v-theme--light v-locale--is-ltr v-text-field">
            <!---->
            <div class="v-input__control">
              <div class="v-field v-field--center-affix v-field--variant-filled v-theme--light v-locale--is-ltr">
                <div class="v-field__overlay"></div>
                <div class="v-field__loader">
                  <div class="v-progress-linear v-theme--light v-locale--is-ltr" style="top: 0px; height: 0px; --v-progress-linear-height: 2px;" role="progressbar" aria-hidden="true" aria-valuemin="0" aria-valuemax="100">
                    <!---->
                    <div class="v-progress-linear__background"></div>
                    <div class="v-progress-linear__buffer" style="width: 0%;"></div>
                    <transition-stub name="fade-transition" appear="false" persisted="false" css="true">
                      <div class="v-progress-linear__indeterminate">
                        <div class="v-progress-linear__indeterminate long"></div>
                        <div class="v-progress-linear__indeterminate short"></div>
                      </div>
                    </transition-stub>
                    <!---->
                  </div>
                </div>
                <!---->
                <div class="v-field__field" data-no-activator=""><label class="v-label v-field-label v-field-label--floating" aria-hidden="true" for="input-3">
                    <!---->Email
                  </label><label class="v-label v-field-label" for="input-3">
                    <!---->Email
                  </label>
                  <!----><input size="1" type="text" id="input-3" aria-describedby="input-3-messages" autocomplete="email" required="" class="v-field__input" value="">
                  <!---->
                </div>
                <!---->
                <!---->
                <div class="v-field__outline">
                  <!---->
                  <!---->
                </div>
              </div>
            </div>
            <div class="v-input__append">
              <!----><button data-v-d31fb907="" type="submit" class="v-btn v-btn--disabled v-theme--light bg-primary v-btn--density-default v-btn--size-default v-btn--variant-flat" style="height: 56px;" disabled=""><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
                <!----><span class="v-btn__content" data-no-activator="">Create Explorer</span>
                <!---->
                <!---->
              </button><button data-v-d31fb907="" type="button" class="v-btn v-theme--light text-primary v-btn--density-default v-btn--size-default v-btn--variant-text" style="height: 56px;"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
                <!----><span class="v-btn__content" data-no-activator="">Back</span>
                <!---->
                <!---->
              </button>
            </div>
            <div id="input-3-messages" class="v-input__details" role="alert" aria-live="polite">
              <transition-group-stub name="slide-y-transition" tag="div" appear="false" persisted="false" css="true" class="v-messages">
                <div class="v-messages__message">We'll send you the link to the explorer</div>
              </transition-group-stub>
              <!---->
            </div>
          </div>
        </form>
      </div>
    </transition-stub>
  </div>
  <!---->
  <!----><span class="v-card__underlay"></span>
</div>"
`;

exports[`DemoExplorerSetupEmbedded.vue > shows the success message after explorer creation 1`] = `
"<div data-v-d31fb907="" class="v-card v-theme--light border-none v-card--density-default v-card--variant-elevated">
  <!---->
  <div class="v-card__loader">
    <div class="v-progress-linear v-theme--light v-locale--is-ltr" style="top: 0px; height: 0px; --v-progress-linear-height: 2px;" role="progressbar" aria-hidden="true" aria-valuemin="0" aria-valuemax="100">
      <!---->
      <div class="v-progress-linear__background"></div>
      <div class="v-progress-linear__buffer" style="width: 0%;"></div>
      <transition-stub name="fade-transition" appear="false" persisted="false" css="true">
        <div class="v-progress-linear__indeterminate">
          <div class="v-progress-linear__indeterminate long"></div>
          <div class="v-progress-linear__indeterminate short"></div>
        </div>
      </transition-stub>
      <!---->
    </div>
  </div>
  <!---->
  <!---->
  <div data-v-d31fb907="" class="v-card-text pa-2 pt-3 pb-0">
    <transition-stub data-v-d31fb907="" name="slide-x-transition" mode="out-in" appear="false" persisted="false" css="true">
      <div data-v-d31fb907="">
        <div data-v-d31fb907="" class="text-success text-h6 d-flex align-center justify-center text-center w-100" style="min-height: 60px;"><i data-v-d31fb907="" class="mdi-check-circle mdi v-icon notranslate v-theme--light v-icon--size-default mr-2" aria-hidden="true"></i> Your demo explorer is ready! A link has been sent to your email. </div>
      </div>
    </transition-stub>
  </div>
  <!---->
  <!----><span class="v-card__underlay"></span>
</div>"
`;
